# bsbm_redshift_manifest_generator

./: Cargo.toml
src/: main.rs
