[package]
name = "bsbm_redshift_manifest_generator"
version = "0.1.0"
authors = ["Jess Balint <jbalint@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde_json = { version = "1.0" }
serde = { version = "1.0", features = ["derive"] }
